--- a/src/main/resources/templates/loader.html
+++ b/src/main/resources/templates/loader.html
@@ -8,7 +8,7 @@
 <body>
 <h1>페이지를 불러오는 중...</h1>
 
-<script src="/js/default.js"></script>
+<script src="/static/js/default.js"></script>
 <script>
 </script>
 </body>
