--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -7,6 +7,6 @@
 <body>
 <h1>Hello, admin</h1>
 
-<script src="/js/default.js"></script>
+<script src="/static/js/default.js"></script>
 </body>
 </html>
